calling new Long() or Integer() causes memory allocation .valueOf() is more memory friendly.